// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input it should render 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  position: relative;
}

.c1 {
  position: absolute;
  z-index: 1;
  height: 100%;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 100%;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 8px 24px;
  z-index: 0;
  border: 1px solid gray;
  border-radius: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <input
    className="c2"
  />
</div>
`;

exports[`input should render with clear button 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  position: relative;
}

.c1 {
  position: absolute;
  z-index: 1;
  height: 100%;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  position: absolute;
  z-index: 1;
  height: 100%;
  margin: 0;
  padding: 8px;
  border: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
}

.c2 {
  width: 100%;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 8px 24px;
  z-index: 0;
  border: 1px solid gray;
  border-radius: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <input
    className="c2"
  />
  <button
    className="c3"
    onClick={[Function]}
    title="Clear"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="18"
        x2="6"
        y1="6"
        y2="18"
      />
      <line
        x1="6"
        x2="18"
        y1="6"
        y2="18"
      />
    </svg>
  </button>
</div>
`;

exports[`input should render with icon 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  position: relative;
}

.c1 {
  position: absolute;
  z-index: 1;
  height: 100%;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 100%;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 8px 24px;
  z-index: 0;
  border: 1px solid gray;
  border-radius: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <i>
      i
    </i>
  </div>
  <input
    className="c2"
  />
</div>
`;
